--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':facedetection_test1', ':readsqlite', ':conslay', ':demofragswitch', ':segmentseekbar'
+include ':facedetection_test1', ':readsqlite', ':conslay', ':demofragswitch', ':segmentseekbar', ':dyanmicip', ':dynarecycleview'
