--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':facedetection_test1', ':readsqlite', ':conslay', ':demofragswitch', ':segmentseekbar', ':dyanmicip', ':dynarecycleview', ':signalstatus', ':togglepassword', ':batterylogs', ':retroapp', ':sqlitetransaction', ':rndwebview', ':percentagelayout'
+include ':facedetection_test1', ':readsqlite', ':conslay', ':demofragswitch', ':segmentseekbar', ':dyanmicip', ':dynarecycleview', ':signalstatus', ':togglepassword', ':batterylogs', ':retroapp', ':sqlitetransaction', ':rndwebview', ':percentagelayout', ':myapplication', ':firebasetest'
